# EmbedTesting

./: CMakeLists.txt
cmake/: arm-gcc-none-eabi.cmake
inc/: cmocka_platform.h  main.h  run_test.h
libs/stm32bsp/: CMakeLists.txt
src/: main.c  run_test.c
